--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -31,10 +31,11 @@
       padding: 0.5rem 1rem;
       display: flex;
       align-items: center;
-      margin-left: 0;
-      margin-bottom: 1rem;
+      margin: 0 auto 1rem auto;
       width: 100%;
       max-width: 350px;
+      box-sizing: border-box;
+      justify-content: center;
     }
     .card-img-top {
       width: 100%;
