--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -8,7 +8,24 @@
         <br>
       </div>
       <div class="card col-12 col-md-8 offset-md-2 show-card listing-card mb-3">
-        <img src="<%=listing.image.url ? listing.image.url : listing.image%>" class="card-img-top show-img img-fluid" alt="listing_image">
+        <img src="<%=listing.image.url ? listing.image.url : listing.image%>" class="card-img-top show-img img-fluid responsive-listing-img" alt="listing_image">
+  <style>
+    .responsive-listing-img {
+      width: 100%;
+      max-width: 400px;
+      height: 16rem;
+      object-fit: cover;
+      border-radius: 0.75rem;
+      margin: 0 auto;
+      display: block;
+    }
+    @media (max-width: 576px) {
+      .responsive-listing-img {
+        max-width: 100%;
+        height: 10rem;
+      }
+    }
+  </style>
         <div class="card-body">
           <p class="card-text" style="font-size: 1.22rem;">
             <b style="font-size: 1.7rem;"><%= listing.title %></b> <br>
