This is another commit

--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,3 +1,30 @@
+  @media (max-width: 768px) {
+    .navbar-collapse {
+      position: absolute;
+      top: 56px;
+      left: 0;
+      width: 100%;
+      padding: 1.5rem 1rem 1rem 1rem;
+    }
+    .navbar-nav {
+      margin-bottom: 1rem;
+    }
+    .navbar-action-btn,
+    .nav-link {
+      margin-bottom: 1rem;
+      padding: 0.7rem 1.2rem;
+      font-size: 1.1rem;
+      border-radius: 18px;
+      width: 100%;
+      text-align: left;
+    }
+    .d-flex {
+      margin-bottom: 1.2rem;
+    }
+    .search-input {
+      margin-bottom: 0.7rem;
+    }
+  }
 <style>
   .btn-search{
     background-color: #fe424d;
